--- a/app/call/[id]/page.module.css
+++ b/app/call/[id]/page.module.css
@@ -5,6 +5,15 @@
     color: white;
     position: relative;
     overflow: hidden;
+    -webkit-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+}
+
+.callWrapper video,
+.callWrapper img {
+    -webkit-user-drag: none;
+    pointer-events: none;
 }
 
 .container {
